xtensa: fix PR target/82181

2017-09-11  Max Filippov  <jcmvbkbc@gmail.com>
gcc/
	* config/xtensa/xtensa.c (xtensa_mem_offset): Check that both
	words of E_DImode object are reachable by xtensa_uimm8x4 access.

From-SVN: r251986